--- a/MyProject-master/angular.json
+++ b/MyProject-master/angular.json
@@ -24,6 +24,9 @@
             ],
             "styles": [
               {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
+              {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -76,6 +79,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
