--- a/MyProject-master/package.json
+++ b/MyProject-master/package.json
@@ -24,6 +24,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@progress/kendo-angular-dialog": "^3.10.0",
+    "@progress/kendo-angular-l10n": "^1.1.0",
+    "@progress/kendo-angular-notification": "^1.2.0",
+    "@progress/kendo-theme-default": "latest",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "ng2-file-upload": "^1.3.0",
@@ -31,11 +35,12 @@
     "ng2-toastr": "^4.1.2",
     "ngx-toasta": "^0.1.0",
     "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.2.2",
-    "zone.js": "^0.8.26"
+    "rxjs-compat": "^6.0.0",
+    "zone.js": "^0.8.26",
+    "@progress/kendo-angular-buttons": "^4.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.5",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~6.0.5",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
@@ -51,7 +56,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng2-completer": "^2.0.8",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
